# Neural-Swarm

./: .gitignore  CMakeLists.txt  README.md  package.xml
controllers/: neural_controller.py  neural_slice.py  race_controller.py  self_controller.py  utils.py
controllers/baseline/: hive_20_circle.py  neural_controller_beta.py  solo_circle.py  solo_stop.py
controllers/prototypes/: gamepad_controller.py  laser_test.py  neural_data.py  neural_swarm.py
data/: data_robot1.npz  data_robot2.npz  data_robot3.npz  data_robot4.npz
documentation/: Neural_Explanation.md  folder_explanation.md  general_flowchart.drawio  general_flowchart_notes.drawio  terminal_commands.md
launch/: gamepad.launch.py  r_neural.launch.py  race.launch.py  single.launch.py
launch/prototypes/: rN.launch.py
lp_neural_swarm/: __init__.py
testing/: laser_output.txt  odom_output.txt  sk.py  state.py
urdf/: diff_drive.urdf.xacro  differential_drive_base.urdf.xacro  differential_drive_cam_lidar_fisheyes.xacro  extract_robot_description.py  fisheyes.urdf.xacro  robot_description.xml  wheel.urdf.xacro  ydlidar.urdf.xacro
worlds/: 10box.world  20box.world  cross.world  maze.world  racetrack.world  wall.world
